--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mini-scrape",
   "version": "1.0.0",
   "description": "simple scrape function working only nodejs",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "babel src --out-dir dist"
   },
