--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-scrape",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "simple scrape function working only nodejs",
   "main": "dist/index.js",
   "scripts": {
@@ -16,8 +16,6 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "babel-preset-es2015": "^6.24.1"
   }
 }
