--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "mini-scrape",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "simple scrape function working only nodejs",
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src --out-dir dist"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mottox2/mini-scrape.git"
   },
   "keywords": [],
   "author": "mottox2",
@@ -17,5 +21,6 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1"
-  }
+  },
+  "homepage": "https://github.com/mottox2/mini-scrape"
 }
