--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "request": "^2.85.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1"
+    "@babel/cli": "^7.0.0-beta.55",
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/preset-env": "^7.0.0-beta.55"
   },
   "homepage": "https://github.com/mottox2/mini-scrape"
 }
